docs: release notes for 1.24.0-rc1
Closes #5086

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -8,31 +8,96 @@ on the release branch in GitHub.
 
 ## Version 1.24.0 RC1
 
-**Release date:** Jun 2x, 2024
+**Release date:** Jul 24, 2024
+
+!!! Warning
+    Preview version: Not production-ready.
+    Released for experimentation and testing only.
 
 ### Important changes:
 
-- TODO: cnpg.io/instanceRole as service selector?
+- Deprecate the `role` label in the selectors of `Service` and
+  `PodDisruptionBudget` resources in favor of `cnpg.io/instanceRole` (#4897).
 
 ### Features:
 
-- TODO: prevent failovers when disk space is exhausted (#4404)
-- TODO: managed services (#4769)
+- **Distributed PostgreSQL Topologies**: Enhance the replica cluster feature to
+  create distributed database topologies for PostgreSQL that span multiple
+  Kubernetes clusters, enabling hybrid and multi-cloud deployments. This feature
+  supports:
+    - **Declarative Primary Control**: Easily specify which PostgreSQL cluster
+      acts as the primary in a distributed setup (#4388).
+    - **Seamless Switchover**: Effortlessly demote the current primary and
+      promote a selected replica cluster, typically in a different region,
+      without needing to rebuild the former primary. This ensures high availability
+      and resilience in diverse environments (#4411).
+- **Managed Services**: Introduce managed services via the `managed.services`
+  stanza (#4769 and #4952), allowing you to:
+    - Disable the read-only and read services via configuration.
+    - Leverage the service template capability to create custom service
+      resources, including load balancers, to access PostgreSQL outside
+      Kubernetes (particularly useful for DBaaS purposes).
+- **WAL Disk Space Exhaustion**: Safely stop the cluster when PostgreSQL runs
+  out of disk space to store WAL files, making recovery easier by increasing
+  the size of the related volume (#4404).
 
 ### Enhancements:
 
+- Introduce `postInitSQLRefs` and `postInitTemplateSQLRefs` to allow users to
+  define `postInit` and `postInitTemplate` instructions as one or more config
+  maps or secrets (#5074).
+- Add transparent support for PostgreSQL 17's `allow_alter_system` parameter,
+  enabling or disabling the `ALTER SYSTEM` command through the
+`.spec.postgresql.enableAlterSystem` option (#4921).
+- Allow overriding the query metric name and the names of the columns using a
+  `name` key/value pair, which can replace the name automatically inherited
+  from the parent key (#4779).
 - Enhanced control over exported metrics by making them subject to the value
   returned by a custom query, which is run within the same transaction and
-  defined in the `predicate_query` field (#4503)
-
-### Fixes:
-
-TODO
+  defined in the `predicate_query` field (#4503).
+- Allow additional arguments to be passed to `barman-cloud-wal-archive` and
+  `barman-cloud-wal-restore` (#5099).
+- Introduce the `reconcilePodSpec` annotation on the `Cluster` and `Pooler`
+  resources to control the restart of pods following a change in the Pod
+  specification (#5069).
+- Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
+  collector (#5044).
 
 ### Security:
 
-- TODO: add TLS communication between operator and instance manager (#4442)
+- Add TLS communication between the operator and instance manager (#4442).
+- Add TLS communication for the metrics exporter on the instance manager and
 
-### Changes:
+### Fixes:
 
-TODO
+- Enhance the mechanism for detecting Pods that have been terminated but not
+  deleted during an eviction process, and extend the cleanup process during
+  maintenance windows to include unschedulable Pods when the `reusePVC` flag is
+  set to false (#2056).
+- Disable `pg_rewind` execution for newly created replicas that employ
+  VolumeSnapshot during bootstrapping to avoid introducing a new shutdown
+  checkpoint entry in the WAL files. This ensures that replicas can reconnect to
+  the primary without issues, which would otherwise be hindered by the additional
+  checkpoint entry (#5081).
+- Enhance the robustness of the immediate backups reconciler by implementing
+  retry logic upon initial backup failure (#4982).
+- Wait for the `postmaster` to shut down before starting it again (#4938).
+- Ensure that the `Pooler` service template can override the default service
+  (#4846).
+- Exclude immutable databases from `pg_database` metric monitoring and alerting
+  processes (#4980).
+- Fix cluster role permissions for `ClusterImageCatalogs` (#5034).
+- Ignore `ServerName` mismatch in internal TLS communication (#4895).
+- Improve error handling in the `EnsureDirectoryExists` function (#4892).
+- Make the operator image part of the configuration hash of the `Pooler`
+  resource, so that an operator upgrade triggers a rollout (#5006).
+- Prevent concurrent `postmaster` lifecycle loops (#4920).
+- Prevent reconciliation of resources that aren't owned by a `Pooler` (#4967).
+- Renew the certificates managed by the operator when the DNS Subject
+  Alternative Names (SANs) are updated (#3269, #3319).
+- Set PVC default `AccessModes` in the template only when unspecified (#4845).
+- `cnpg` plugin:
+  - Properly handle errors during the `status` command execution.
+  - Support TLS in the `status` command (#4915).
+  pod monitors (#4927).
+
