docs: add syncrep
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -37,6 +37,11 @@ on the release branch in GitHub.
     - Leverage the service template capability to create custom service
       resources, including load balancers, to access PostgreSQL outside
       Kubernetes (particularly useful for DBaaS purposes).
+- **Enhanced API for Synchronous Replication**: Introducing an improved API for
+  explicit configuration of synchronous replication, supporting both
+  quorum-based and priority list strategies. This update allows full
+  customization of the `synchronous_standby_names` option, providing greater
+  control and flexibility (#5148).
 - **WAL Disk Space Exhaustion**: Safely stop the cluster when PostgreSQL runs
   out of disk space to store WAL files, making recovery easier by increasing
   the size of the related volume (#4404).
