--- a/docs/src/release_notes/v1.22.md
+++ b/docs/src/release_notes/v1.22.md
@@ -49,6 +49,10 @@ on the release branch in GitHub.
   checkpoint entry in the WAL files. This ensures that replicas can reconnect to
   the primary without issues, which would otherwise be hindered by the additional
   checkpoint entry (#5081).
+- Gracefully handle failures during the initialization of a new instance.
+  Any remaining data from the failed initialization is now either removed or,
+  if it's a valid PostgreSQL data directory, moved to a backup location to avoid
+  possible data loss (#5112).
 - Enhance the robustness of the immediate backups reconciler by implementing
   retry logic upon initial backup failure (#4982).
 - Wait for the `postmaster` to shut down before starting it again (#4938).
