--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -109,3 +109,4 @@ on the release branch in GitHub.
 - `cnpg` plugin:
   - Properly handle errors during the `status` command execution.
   - Support TLS in the `status` command (#4915).
+  - Show `demotionToken` in `status` command (#5149).
