--- a/docs/src/release_notes/v1.22.md
+++ b/docs/src/release_notes/v1.22.md
@@ -60,6 +60,7 @@ on the release branch in GitHub.
   (#4846).
 - Exclude immutable databases from `pg_database` metric monitoring and alerting
   processes (#4980).
+- Removed unnecessary permissions from the operator service account (#4911).
 - Fix cluster role permissions for `ClusterImageCatalogs` (#5034).
 - Ignore `ServerName` mismatch in internal TLS communication (#4895).
 - Improve error handling in the `EnsureDirectoryExists` function (#4892).
