--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -71,8 +71,7 @@ on the release branch in GitHub.
 ### Security:
 
 - Add TLS communication between the operator and instance manager (#4442).
-- Add TLS communication for the metrics exporter on the instance manager and
-  pod monitors (#4927).
+- Add optional TLS communication for the instance metrics exporter (#4927).
 
 ### Fixes:
 
