--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -54,6 +54,7 @@ on the release branch in GitHub.
 - Renew the certificates managed by the operator when the DNS Subject
   Alternative Names (SANs) are updated (#3269, #3319).
 - Set PVC default `AccessModes` in the template only when unspecified (#4845).
+- Gracefully handle unsatisfiable backup schedule (#5109).
 - `cnpg` plugin:
   - Properly handle errors during the `status` command execution.
   - Support TLS in the `status` command (#4915).
