--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -67,6 +67,12 @@ on the release branch in GitHub.
   specification (#5069).
 - Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
   collector (#5044).
+- Enhance the `cnpg` plugin `publication` and `subscription` subcommand
+  to customize the remote database name (#5113)
+- Add support for customizing the remote database name in the `publication`
+  and `subscription` plugin subcommands. This enhancement provides greater
+  flexibility when synchronizing data from an external cluster containing
+  multiple databases (#5113).
 
 ### Security:
 
