chore: add #5156 and warning about restarts
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -18,6 +18,13 @@ on the release branch in GitHub.
 
 - Deprecate the `role` label in the selectors of `Service` and
   `PodDisruptionBudget` resources in favor of `cnpg.io/instanceRole` (#4897).
+- Fix the default PodAntiAffinity configuration for PostgreSQL Pods,
+  allowing a PostgreSQL and a Pooler Instance to coexist on the same node when
+  the anti-affinity configuration is set to `required` (#5156).
+
+!!! Warning
+    The PodAntiAffinity change will trigger a rollout of all the instances when
+    the operator is upgraded, even when online upgrades are enabled.
 
 ### Features:
 
