fix: position of demotion token and cnpg plugin
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -74,12 +74,13 @@ on the release branch in GitHub.
   specification (#5069).
 - Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
   collector (#5044).
-- Enhance the `cnpg` plugin `publication` and `subscription` subcommand
-  to customize the remote database name (#5113)
-- Add support for customizing the remote database name in the `publication`
-  and `subscription` plugin subcommands. This enhancement provides greater
-  flexibility when synchronizing data from an external cluster containing
-  multiple databases (#5113).
+- `cnpg` plugin updates:
+  - Enhanced the `status` command to display `demotionToken` and
+    `promotionToken` when available, providing more detailed operational
+    insights with distributed topologies (#5149).
+  - Added support for customizing the remote database name in the `publication`
+    and `subscription` subcommands. This enhancement offers greater flexibility
+    for synchronizing data from an external cluster with multiple databases (#5113).
 
 ### Security:
 
@@ -123,4 +124,3 @@ on the release branch in GitHub.
 - `cnpg` plugin:
   - Properly handle errors during the `status` command execution.
   - Support TLS in the `status` command (#4915).
-  - Show `demotionToken` in `status` command (#5149).
