docs: remove obsolete references for older versions
Closes #5179

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/old/v1.20.md
+++ b/docs/src/release_notes/old/v1.20.md
@@ -318,8 +318,7 @@ Fixes:
         unsupervised rolling update procedure (`primaryUpdateMethod`
         defaults to `restart`, unless explicitly set to `switchover`)
     
-    For further information, please refer to the
-    ["Installation and upgrades" section](../installation_upgrade.md#upgrading-to-120-from-a-previous-minor-version).
+    For further information, please refer to the "Installation and upgrades" section.
 
 Features:
 
