--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -45,11 +45,11 @@ on the release branch in GitHub.
   processes (#4980).
 - Removed unnecessary permissions from the operator service account (#4911).
 - Fix cluster role permissions for `ClusterImageCatalogs` (#5034).
-- Ignore `ServerName` mismatch in internal TLS communication (#4895).
-- Improve error handling in the `EnsureDirectoryExists` function (#4892).
-- Make the operator image part of the configuration hash of the `Pooler`
-  resource, so that an operator upgrade triggers a rollout (#5006).
-- Prevent concurrent `postmaster` lifecycle loops (#4920).
+- Ensure the operator initiates a rollout of the `Pooler` instance when
+  the operator image is upgraded (#5006)
+- Address race condition causing the readiness probe to incorrectly
+  show "not ready" after a PostgreSQL restart, even when the
+  `postmaster` was accessible (#4920).
 - Prevent reconciliation of resources that aren't owned by a `Pooler` (#4967).
 - Renew the certificates managed by the operator when the DNS Subject
   Alternative Names (SANs) are updated (#3269, #3319).
