docs: release notes for 1.22.5 (#5140)
Closes #5086

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enteprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Leonardo Cecchi <leonardo.cecchi@enteprisedb.com>

--- a/docs/src/release_notes/v1.22.md
+++ b/docs/src/release_notes/v1.22.md
@@ -6,6 +6,60 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.22)
 on the release branch in GitHub.
 
+## Version 1.22.5
+
+**Release date:** Jul 29, 2024
+
+!!! Warning
+    This is expected to be the last release in the 1.22.X series.
+    Users are encouraged to update to a newer minor version soon.
+
+### Enhancements:
+
+- Add transparent support for PostgreSQL 17's `allow_alter_system` parameter,
+  enabling or disabling the `ALTER SYSTEM` command through the
+  `.spec.postgresql.enableAlterSystem` option (#4921).
+- Introduce the `reconcilePodSpec` annotation on the `Cluster` and `Pooler`
+  resources to control the restart of pods following a change in the Pod
+  specification (#5069).
+- Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
+  collector (#5044).
+
+### Fixes:
+
+- Enhance the mechanism for detecting Pods that have been terminated but not
+  deleted during an eviction process, and extend the cleanup process during
+  maintenance windows to include unschedulable Pods when the `reusePVC` flag is
+  set to false (#2056).
+- Disable `pg_rewind` execution for newly created replicas that employ
+  VolumeSnapshot during bootstrapping to avoid introducing a new shutdown
+  checkpoint entry in the WAL files. This ensures that replicas can reconnect to
+  the primary without issues, which would otherwise be hindered by the additional
+  checkpoint entry (#5081).
+- Gracefully handle failures during the initialization of a new instance.
+  Any remaining data from the failed initialization is now either removed or,
+  if it's a valid PostgreSQL data directory, moved to a backup location to avoid
+  possible data loss (#5112).
+- Enhance the robustness of the immediate backups reconciler by implementing
+  retry logic upon initial backup failure (#4982).
+- Wait for the `postmaster` to shut down before starting it again (#4938).
+- Exclude immutable databases from `pg_database` metric monitoring and alerting
+  processes (#4980).
+- Removed unnecessary permissions from the operator service account (#4911).
+- Ensure the operator initiates a rollout of the `Pooler` instance when
+  the operator image is upgraded (#5006)
+- Address race condition causing the readiness probe to incorrectly
+  show "not ready" after a PostgreSQL restart, even when the
+  `postmaster` was accessible (#4920).
+- Prevent reconciliation of resources that aren't owned by a `Pooler` (#4967).
+- Renew the certificates managed by the operator when the DNS Subject
+  Alternative Names (SANs) are updated (#3269, #3319).
+- Set PVC default `AccessModes` in the template only when unspecified (#4845).
+- Gracefully handle unsatisfiable backup schedule (#5109).
+- `cnpg` plugin:
+  - Properly handle errors during the `status` command execution.
+  - Support TLS in the `status` command (#4915).
+
 ## Version 1.22.4
 
 **Release date:** Jun 12, 2024
