--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -8,31 +8,119 @@ on the release branch in GitHub.
 
 ## Version 1.24.0 RC1
 
-**Release date:** Jun 2x, 2024
+**Release date:** Jul 29, 2024
+
+!!! Warning
+    Preview version: Not production-ready.
+    Released for experimentation and testing only.
 
 ### Important changes:
 
-- TODO: cnpg.io/instanceRole as service selector?
+- Deprecate the `role` label in the selectors of `Service` and
+  `PodDisruptionBudget` resources in favor of `cnpg.io/instanceRole` (#4897).
+- Fix the default PodAntiAffinity configuration for PostgreSQL Pods,
+  allowing a PostgreSQL and a Pooler Instance to coexist on the same node when
+  the anti-affinity configuration is set to `required` (#5156).
+
+!!! Warning
+    The PodAntiAffinity change will trigger a rollout of all the instances when
+    the operator is upgraded, even when online upgrades are enabled.
 
 ### Features:
 
-- TODO: prevent failovers when disk space is exhausted (#4404)
-- TODO: managed services (#4769)
+- **Distributed PostgreSQL Topologies**: Enhance the replica cluster feature to
+  create distributed database topologies for PostgreSQL that span multiple
+  Kubernetes clusters, enabling hybrid and multi-cloud deployments. This feature
+  supports:
+    - **Declarative Primary Control**: Easily specify which PostgreSQL cluster
+      acts as the primary in a distributed setup (#4388).
+    - **Seamless Switchover**: Effortlessly demote the current primary and
+      promote a selected replica cluster, typically in a different region,
+      without needing to rebuild the former primary. This ensures high availability
+      and resilience in diverse environments (#4411).
+- **Managed Services**: Introduce managed services via the `managed.services`
+  stanza (#4769 and #4952), allowing you to:
+    - Disable the read-only and read services via configuration.
+    - Leverage the service template capability to create custom service
+      resources, including load balancers, to access PostgreSQL outside
+      Kubernetes (particularly useful for DBaaS purposes).
+- **Enhanced API for Synchronous Replication**: Introducing an improved API for
+  explicit configuration of synchronous replication, supporting both
+  quorum-based and priority list strategies. This update allows full
+  customization of the `synchronous_standby_names` option, providing greater
+  control and flexibility (#5148).
+- **WAL Disk Space Exhaustion**: Safely stop the cluster when PostgreSQL runs
+  out of disk space to store WAL files, making recovery easier by increasing
+  the size of the related volume (#4404).
 
 ### Enhancements:
 
+- Introduce `postInitSQLRefs` and `postInitTemplateSQLRefs` to allow users to
+  define `postInit` and `postInitTemplate` instructions as one or more config
+  maps or secrets (#5074).
+- Add transparent support for PostgreSQL 17's `allow_alter_system` parameter,
+  enabling or disabling the `ALTER SYSTEM` command through the
+`.spec.postgresql.enableAlterSystem` option (#4921).
+- Allow overriding the query metric name and the names of the columns using a
+  `name` key/value pair, which can replace the name automatically inherited
+  from the parent key (#4779).
 - Enhanced control over exported metrics by making them subject to the value
   returned by a custom query, which is run within the same transaction and
-  defined in the `predicate_query` field (#4503)
-
-### Fixes:
-
-TODO
+  defined in the `predicate_query` field (#4503).
+- Allow additional arguments to be passed to `barman-cloud-wal-archive` and
+  `barman-cloud-wal-restore` (#5099).
+- Introduce the `reconcilePodSpec` annotation on the `Cluster` and `Pooler`
+  resources to control the restart of pods following a change in the Pod
+  specification (#5069).
+- Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
+  collector (#5044).
+- `cnpg` plugin updates:
+  - Enhanced the `status` command to display `demotionToken` and
+    `promotionToken` when available, providing more detailed operational
+    insights with distributed topologies (#5149).
+  - Added support for customizing the remote database name in the `publication`
+    and `subscription` subcommands. This enhancement offers greater flexibility
+    for synchronizing data from an external cluster with multiple databases (#5113).
 
 ### Security:
 
-- TODO: add TLS communication between operator and instance manager (#4442)
+- Add TLS communication between the operator and instance manager (#4442).
+- Add optional TLS communication for the instance metrics exporter (#4927).
 
-### Changes:
+### Fixes:
 
-TODO
+- Enhance the mechanism for detecting Pods that have been terminated but not
+  deleted during an eviction process, and extend the cleanup process during
+  maintenance windows to include unschedulable Pods when the `reusePVC` flag is
+  set to false (#2056).
+- Disable `pg_rewind` execution for newly created replicas that employ
+  VolumeSnapshot during bootstrapping to avoid introducing a new shutdown
+  checkpoint entry in the WAL files. This ensures that replicas can reconnect to
+  the primary without issues, which would otherwise be hindered by the additional
+  checkpoint entry (#5081).
+- Gracefully handle failures during the initialization of a new instance.
+  Any remaining data from the failed initialization is now either removed or,
+  if it's a valid PostgreSQL data directory, moved to a backup location to avoid
+  possible data loss (#5112).
+- Enhance the robustness of the immediate backups reconciler by implementing
+  retry logic upon initial backup failure (#4982).
+- Wait for the `postmaster` to shut down before starting it again (#4938).
+- Ensure that the `Pooler` service template can override the default service
+  (#4846).
+- Exclude immutable databases from `pg_database` metric monitoring and alerting
+  processes (#4980).
+- Removed unnecessary permissions from the operator service account (#4911).
+- Fix cluster role permissions for `ClusterImageCatalogs` (#5034).
+- Ensure the operator initiates a rollout of the `Pooler` instance when
+  the operator image is upgraded (#5006)
+- Address race condition causing the readiness probe to incorrectly
+  show "not ready" after a PostgreSQL restart, even when the
+  `postmaster` was accessible (#4920).
+- Prevent reconciliation of resources that aren't owned by a `Pooler` (#4967).
+- Renew the certificates managed by the operator when the DNS Subject
+  Alternative Names (SANs) are updated (#3269, #3319).
+- Set PVC default `AccessModes` in the template only when unspecified (#4845).
+- Gracefully handle unsatisfiable backup schedule (#5109).
+- `cnpg` plugin:
+  - Properly handle errors during the `status` command execution.
+  - Support TLS in the `status` command (#4915).
