fix: cosmetic changes
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -56,8 +56,8 @@ on the release branch in GitHub.
 ### Enhancements:
 
 - Add support for delayed replicas by introducing the
-  .spec.replica.minApplyDelay option, leveraging PostgreSQL's
-  recovery_min_apply_delay capability (#5181).
+  `.spec.replica.minApplyDelay` option, leveraging PostgreSQL's
+  `recovery_min_apply_delay` capability (#5181).
 - Introduce `postInitSQLRefs` and `postInitTemplateSQLRefs` to allow users to
   define `postInit` and `postInitTemplate` instructions as one or more config
   maps or secrets (#5074).
