docs: general update of docs for 1.24.0 release
Closes #5316

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/old/v1.22.md
+++ b/docs/src/release_notes/old/v1.22.md
@@ -260,7 +260,7 @@ Fixes:
     This release introduces a significant change, disabling the default usage
     of the `ALTER SYSTEM` command in PostgreSQL. For users upgrading from a
     previous version who wish to retain the old behavior: please refer to the
-    [upgrade documentation](../installation_upgrade.md) for detailed instructions.
+    [upgrade documentation](../../installation_upgrade.md) for detailed instructions.
 
 ### Features:
 
