--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -6,13 +6,9 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.24)
 on the release branch in GitHub.
 
-## Version 1.24.0-rc1
+## Version 1.24.0
 
-**Release date:** Jul 30, 2024
-
-!!! Warning
-    Preview version: Not production-ready.
-    Released for experimentation and testing only.
+**Release date:** Aug 22, 2024
 
 ### Important changes:
 
