docs: update draft release notes for 1.24.0 including post rc1 changes
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -51,6 +51,9 @@ on the release branch in GitHub.
 
 ### Enhancements:
 
+- The readiness probe now fails for streaming replicas that were
+  never connected to the primary instance, allowing incoherent replicas
+  to be discovered promptly (#5206).
 - Add support for delayed replicas by introducing the
   `.spec.replica.minApplyDelay` option, leveraging PostgreSQL's
   `recovery_min_apply_delay` capability (#5181).
@@ -74,6 +77,11 @@ on the release branch in GitHub.
 - Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
   collector (#5044).
 - `cnpg` plugin updates:
+  - Enhance the `install generate` command by adding a `--control-plane` option,
+    allowing deployment of the operator on control-plane nodes by setting
+    node affinity and tolerations (#5271).
+  - Enhance the `destroy` command to delete also any job related to the target
+    instance (#5298).
   - Enhanced the `status` command to display `demotionToken` and
     `promotionToken` when available, providing more detailed operational
     insights with distributed topologies (#5149).
@@ -88,6 +96,12 @@ on the release branch in GitHub.
 
 ### Fixes:
 
+- Synchronous replication self-healing checks now exclude terminated pods,
+  focusing only on active and functional pods (#5210).
+- The instance manager will now terminate all existing operator-related replication
+  connections following a role change in a replica cluster (#5209).
+- Added support for setting `smartShutdownTimeout` to zero, skipping the smart shutdown
+  and immediately triggering a fast shutdown when required (#5347).
 - Enhance the mechanism for detecting Pods that have been terminated but not
   deleted during an eviction process, and extend the cleanup process during
   maintenance windows to include unschedulable Pods when the `reusePVC` flag is
