review release notes
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -13,6 +13,9 @@ on the release branch in GitHub.
 ### Enhancements:
 
 - `cnpg` plugin updates:
+  - Enhance the `install generate` command by adding a `--control-plane` option,
+    allowing deployment of the operator on control-plane nodes by setting
+    node affinity and tolerations (#5271).
   - Enhance the `destroy` command to delete also any job related to the target
     instance (#5298).
 
@@ -22,8 +25,8 @@ on the release branch in GitHub.
   focusing only on active and functional pods (#5210).
 - The instance manager will now terminate all existing operator-related replication
   connections following a role change in a replica cluster (#5209).
-- Added support for setting `smartShutdownTimeout` to zero, skipping the smart shutdown
-  and immediately triggering a fast shutdown when required (#5347).
+- Allow setting `smartShutdownTimeout` to zero, enabling immediate fast
+  shutdown and bypassing the smart shutdown process when required (#5347).
 
 ## Version 1.23.3
 
