--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -51,9 +51,6 @@ on the release branch in GitHub.
 
 ### Enhancements:
 
-- The readiness probe now fails for streaming replicas that were
-  never connected to the primary instance, allowing incoherent replicas
-  to be discovered promptly (#5206).
 - Add support for delayed replicas by introducing the
   `.spec.replica.minApplyDelay` option, leveraging PostgreSQL's
   `recovery_min_apply_delay` capability (#5181).
@@ -74,6 +71,9 @@ on the release branch in GitHub.
 - Introduce the `reconcilePodSpec` annotation on the `Cluster` and `Pooler`
   resources to control the restart of pods following a change in the Pod
   specification (#5069).
+- The readiness probe now fails for streaming replicas that were
+  never connected to the primary instance, allowing incoherent replicas
+  to be discovered promptly (#5206).
 - Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
   collector (#5044).
 - `cnpg` plugin updates:
@@ -96,12 +96,6 @@ on the release branch in GitHub.
 
 ### Fixes:
 
-- Synchronous replication self-healing checks now exclude terminated pods,
-  focusing only on active and functional pods (#5210).
-- The instance manager will now terminate all existing operator-related replication
-  connections following a role change in a replica cluster (#5209).
-- Added support for setting `smartShutdownTimeout` to zero, skipping the smart shutdown
-  and immediately triggering a fast shutdown when required (#5347).
 - Enhance the mechanism for detecting Pods that have been terminated but not
   deleted during an eviction process, and extend the cleanup process during
   maintenance windows to include unschedulable Pods when the `reusePVC` flag is
@@ -134,6 +128,12 @@ on the release branch in GitHub.
   Alternative Names (SANs) are updated (#3269, #3319).
 - Set PVC default `AccessModes` in the template only when unspecified (#4845).
 - Gracefully handle unsatisfiable backup schedule (#5109).
+- Synchronous replication self-healing checks now exclude terminated pods,
+  focusing only on active and functional pods (#5210).
+- The instance manager will now terminate all existing operator-related replication
+  connections following a role change in a replica cluster (#5209).
+- Allow setting `smartShutdownTimeout` to zero, enabling immediate fast
+  shutdown and bypassing the smart shutdown process when required (#5347).
 - `cnpg` plugin:
   - Properly handle errors during the `status` command execution.
   - Support TLS in the `status` command (#4915).
