--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -77,17 +77,17 @@ on the release branch in GitHub.
 - Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
   collector (#5044).
 - `cnpg` plugin updates:
-  - Enhance the `install generate` command by adding a `--control-plane` option,
-    allowing deployment of the operator on control-plane nodes by setting
-    node affinity and tolerations (#5271).
-  - Enhance the `destroy` command to delete also any job related to the target
-    instance (#5298).
-  - Enhanced the `status` command to display `demotionToken` and
-    `promotionToken` when available, providing more detailed operational
-    insights with distributed topologies (#5149).
-  - Added support for customizing the remote database name in the `publication`
-    and `subscription` subcommands. This enhancement offers greater flexibility
-    for synchronizing data from an external cluster with multiple databases (#5113).
+    - Enhance the `install generate` command by adding a `--control-plane` option,
+      allowing deployment of the operator on control-plane nodes by setting
+      node affinity and tolerations (#5271).
+    - Enhance the `destroy` command to delete also any job related to the target
+      instance (#5298).
+    - Enhanced the `status` command to display `demotionToken` and
+      `promotionToken` when available, providing more detailed operational
+      insights with distributed topologies (#5149).
+    - Added support for customizing the remote database name in the `publication`
+      and `subscription` subcommands. This enhancement offers greater flexibility
+      for synchronizing data from an external cluster with multiple databases (#5113).
 
 ### Security:
 
@@ -135,5 +135,13 @@ on the release branch in GitHub.
 - Allow setting `smartShutdownTimeout` to zero, enabling immediate fast
   shutdown and bypassing the smart shutdown process when required (#5347).
 - `cnpg` plugin:
-  - Properly handle errors during the `status` command execution.
-  - Support TLS in the `status` command (#4915).
+    - Properly handle errors during the `status` command execution.
+    - Support TLS in the `status` command (#4915).
+
+### Supported versions
+
+- Kubernetes 1.31, 1.30, 1.29, and 1.28
+- PostgreSQL 16, 15, 14, 13, and 12
+    - PostgreSQL 16.4 is the default image
+    - PostgreSQL 12 support ends on November 12, 2024
+
