--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -6,6 +6,28 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.23)
 on the release branch in GitHub.
 
+## Version 1.23.4
+
+**Release date:** Aug 22, 2024
+
+### Enhancements:
+
+- `cnpg` plugin updates:
+    - Enhance the `install generate` command by adding a `--control-plane` option,
+      allowing deployment of the operator on control-plane nodes by setting
+      node affinity and tolerations (#5271).
+    - Enhance the `destroy` command to delete also any job related to the target
+      instance (#5298).
+
+### Fixes:
+
+- Synchronous replication self-healing checks now exclude terminated pods,
+  focusing only on active and functional pods (#5210).
+- The instance manager will now terminate all existing operator-related replication
+  connections following a role change in a replica cluster (#5209).
+- Allow setting `smartShutdownTimeout` to zero, enabling immediate fast
+  shutdown and bypassing the smart shutdown process when required (#5347).
+
 ## Version 1.23.3
 
 **Release date:** Jul 29, 2024
