docs: general update of docs for 1.24.0 and 1.23.4 releases (#5321)
Closes #5316

Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -6,13 +6,9 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.24)
 on the release branch in GitHub.
 
-## Version 1.24.0-rc1
+## Version 1.24.0
 
-**Release date:** Jul 30, 2024
-
-!!! Warning
-    Preview version: Not production-ready.
-    Released for experimentation and testing only.
+**Release date:** Aug 22, 2024
 
 ### Important changes:
 
@@ -75,15 +71,23 @@ on the release branch in GitHub.
 - Introduce the `reconcilePodSpec` annotation on the `Cluster` and `Pooler`
   resources to control the restart of pods following a change in the Pod
   specification (#5069).
+- The readiness probe now fails for streaming replicas that were
+  never connected to the primary instance, allowing incoherent replicas
+  to be discovered promptly (#5206).
 - Support the new metrics introduced in PgBouncer 1.23 in the `Pooler` metrics
   collector (#5044).
 - `cnpg` plugin updates:
-  - Enhanced the `status` command to display `demotionToken` and
-    `promotionToken` when available, providing more detailed operational
-    insights with distributed topologies (#5149).
-  - Added support for customizing the remote database name in the `publication`
-    and `subscription` subcommands. This enhancement offers greater flexibility
-    for synchronizing data from an external cluster with multiple databases (#5113).
+    - Enhance the `install generate` command by adding a `--control-plane` option,
+      allowing deployment of the operator on control-plane nodes by setting
+      node affinity and tolerations (#5271).
+    - Enhance the `destroy` command to delete also any job related to the target
+      instance (#5298).
+    - Enhanced the `status` command to display `demotionToken` and
+      `promotionToken` when available, providing more detailed operational
+      insights with distributed topologies (#5149).
+    - Added support for customizing the remote database name in the `publication`
+      and `subscription` subcommands. This enhancement offers greater flexibility
+      for synchronizing data from an external cluster with multiple databases (#5113).
 
 ### Security:
 
@@ -124,6 +128,20 @@ on the release branch in GitHub.
   Alternative Names (SANs) are updated (#3269, #3319).
 - Set PVC default `AccessModes` in the template only when unspecified (#4845).
 - Gracefully handle unsatisfiable backup schedule (#5109).
+- Synchronous replication self-healing checks now exclude terminated pods,
+  focusing only on active and functional pods (#5210).
+- The instance manager will now terminate all existing operator-related replication
+  connections following a role change in a replica cluster (#5209).
+- Allow setting `smartShutdownTimeout` to zero, enabling immediate fast
+  shutdown and bypassing the smart shutdown process when required (#5347).
 - `cnpg` plugin:
-  - Properly handle errors during the `status` command execution.
-  - Support TLS in the `status` command (#4915).
+    - Properly handle errors during the `status` command execution.
+    - Support TLS in the `status` command (#4915).
+
+### Supported versions
+
+- Kubernetes 1.31, 1.30, 1.29, and 1.28
+- PostgreSQL 16, 15, 14, 13, and 12
+    - PostgreSQL 16.4 is the default image
+    - PostgreSQL 12 support ends on November 12, 2024
+
