docs: release notes for 1.24.1 and 1.23.5
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -6,6 +6,34 @@ For a complete list of changes, please refer to the
 [commits](https://github.com/cloudnative-pg/cloudnative-pg/commits/release-1.23)
 on the release branch in GitHub.
 
+## Version 1.23.5
+
+**Release date:** Oct 9, 2024
+
+### Enhancements:
+
+- Remove `pg_database_size` from status probe. This was producing
+  high utilization, as `pg_database_size()` scans the whole `PGDATA` to compute
+  the current size of every database. The pg_database_size will now only be used by the kubectl status plugin to retrieve detailed information (#5689).
+- Show  `potential` sync status in the `status` plugin (#5533).
+- Enable configuration of the `full_page_writes` GUC in PostgreSQL.
+  It is set to `on` by default as per PostgreSQL recommendation (#5516).
+- Add support for specifying Docker image with `--image` flag in the pgadmin4
+  plugin command, allowing users to define the Docker image for the pgAdmin4
+  deployment (#5515).
+
+### Fixes:
+
+- Keep the connection open while running a backup with the plugin command.
+  Before, it was closed as soon as the backup request was correctly received
+  (#5726).
+- Add `BackupStartingCondition` condition to cluster when taking a backup
+  via a plugin (#5697).
+- Remove replicas PDB when scaling down to 2 instances, to allow maintenance on
+  the node containing the replica (#5487).
+- Prioritize full rollout over in-place upgrades, in cases where several
+  conditions require pod rollout, and any one of these require full pod re-creation, preempting a second consecutive rollout (#5407).
+
 ## Version 1.23.4
 
 **Release date:** Aug 22, 2024
