--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -32,7 +32,8 @@ on the release branch in GitHub.
 - Remove replicas PDB when scaling down to 2 instances, to allow maintenance on
   the node containing the replica (#5487).
 - Prioritize full rollout over in-place upgrades, in cases where several
-  conditions require pod rollout, and any one of these require full pod re-creation, preempting a second consecutive rollout (#5407).
+  conditions require pod rollout, and any one of these require full pod
+  re-creation, preempting a second consecutive rollout (#5407).
 
 ## Version 1.23.4
 
