--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -14,7 +14,9 @@ on the release branch in GitHub.
 
 - Remove `pg_database_size` from status probe. This was producing
   high utilization, as `pg_database_size()` scans the whole `PGDATA` to compute
-  the current size of every database. The pg_database_size will now only be used by the kubectl status plugin to retrieve detailed information (#5689).
+  the current size of every database. The pg_database_size will now only be
+  used by the kubectl status plugin to retrieve detailed size information
+  (#5689).
 - Show  `potential` sync status in the `status` plugin (#5533).
 - Enable configuration of the `full_page_writes` GUC in PostgreSQL.
   It is set to `on` by default as per PostgreSQL recommendation (#5516).
