--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -17,15 +17,19 @@ on the release branch in GitHub.
   the current size of every database. The pg_database_size will now only be
   used by the kubectl status plugin to retrieve detailed size information
   (#5689).
-- Show  `potential` sync status in the `status` plugin (#5533).
 - Enable configuration of the `full_page_writes` GUC in PostgreSQL.
   It is set to `on` by default as per PostgreSQL recommendation (#5516).
-- Add support for specifying Docker image with `--image` flag in the pgadmin4
-  plugin command, allowing users to define the Docker image for the pgAdmin4
-  deployment (#5515).
+
+- Plugin:
+    - Add the `logs pretty` command to the `cnpg` plugin to read a log stream from standard input and output a human-readable format, with options to filter log entries (#5770).
+    - Consolidate the output of the `status` command by enabling multiple `-v` options to increase verbosity (#5765).
+    - Add support for specifying Docker image with `--image` flag in the
+      `pgadmin4` plugin command, allowing users to define a specific
+      Docker image for the pgAdmin4 deployment (#5515).
 
 ### Fixes:
 
+- Avoid concurrent status updates when demoting a primary to a designed primary, while demoting a primary cluster to a replica cluster (#5755).
 - Keep the connection open while running a backup with the plugin command.
   Before, it was closed as soon as the backup request was correctly received
   (#5726).
@@ -35,7 +39,17 @@ on the release branch in GitHub.
   the node containing the replica (#5487).
 - Prioritize full rollout over in-place upgrades, in cases where several
   conditions require pod rollout, and any one of these require full pod
- re-creation, preempting a second consecutive rollout (#5407).
+  re-creation, preempting a second consecutive rollout (#5407).
+- Prevent double failover in case of lost connectivity (#5788).
+- Properly set `TMPDIR` and `PSQL_HISTORY` environment variables in pod
+  containers and jobs (#5503).
+
+- Plugin:
+    - Ensure that `synchronous_stanby_names` is properly set also when no replica is reachable (#5831).
+    - Fix a race condition in the `logs cluster` command (#5775).
+    - Show  `potential` sync status in the `status` plugin (#5533).
+    - Ensure pods deployed by `pgadmin4` command have a writable home directory
+      (#5800).
 
 ## Version 1.24.0
 
