--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -8,34 +8,42 @@ on the release branch in GitHub.
 
 ## Version 1.23.5
 
-**Release date:** Oct 9, 2024
+**Release date:** Oct 16, 2024
 
 ### Enhancements:
 
-- Remove `pg_database_size` from status probe. This was producing
-  high utilization, as `pg_database_size()` scans the whole `PGDATA` to compute
-  the current size of every database. The pg_database_size will now only be
-  used by the kubectl status plugin to retrieve detailed size information
-  (#5689).
-- Show  `potential` sync status in the `status` plugin (#5533).
-- Enable configuration of the `full_page_writes` GUC in PostgreSQL.
-  It is set to `on` by default as per PostgreSQL recommendation (#5516).
-- Add support for specifying Docker image with `--image` flag in the pgadmin4
-  plugin command, allowing users to define the Docker image for the pgAdmin4
-  deployment (#5515).
+- Remove the use of `pg_database_size` from the status probe, as it caused
+  high resource utilization by scanning the entire `PGDATA` directory to
+  compute database sizes. The `kubectl status` plugin will now rely on `du`
+  to provide detailed size information retrieval (#5689).
+- Add the ability to configure the `full_page_writes` parameter in
+  PostgreSQL. This setting defaults to `on`, in line with PostgreSQL's
+  recommendations (#5516).
+- Plugin:
+    - Add the `logs pretty` command in the `cnpg` plugin to read a log stream
+      from standard input and output a human-readable format, with options to
+      filter log entries (#5770)
+    - Enhance the `status` command by allowing multiple `-v` options to
+      increase verbosity for more detailed output (#5765).
+    - Add support for specifying a custom Docker image using the `--image`
+      flag in the `pgadmin4` plugin command, giving users control over the
+      Docker image used for pgAdmin4 deployments (#5515).
 
 ### Fixes:
 
-- Keep the connection open while running a backup with the plugin command.
-  Before, it was closed as soon as the backup request was correctly received
-  (#5726).
-- Add `BackupStartingCondition` condition to cluster when taking a backup
-  via a plugin (#5697).
-- Remove replicas PDB when scaling down to 2 instances, to allow maintenance on
-  the node containing the replica (#5487).
-- Prioritize full rollout over in-place upgrades, in cases where several
-  conditions require pod rollout, and any one of these require full pod
-  re-creation, preempting a second consecutive rollout (#5407).
+- Ensure that replica PodDisruptionBudgets (PDB) are removed when scaling down
+  to two instances, enabling easier maintenance on the node hosting the replica
+  (#5487).
+- Prioritize full rollout over inplace restarts (#5407).
+- Fix an issue that could lead to double failover in cases of lost
+  connectivity (#5788).
+- Correctly set the `TMPDIR` and `PSQL_HISTORY` environment variables for pods
+  and jobs, improving temporary file and history management (#5503).
+- Plugin:
+    - Resolve a race condition in the `logs cluster` command (#5775).
+    - Display the `potential` sync status in the `status` plugin (#5533).
+    - Fix the issue where pods deployed by the `pgadmin4` command didn’t have
+      a writable home directory (#5800).
 
 ## Version 1.23.4
 
