--- a/docs/src/release_notes/v1.24.md
+++ b/docs/src/release_notes/v1.24.md
@@ -51,6 +51,10 @@ on the release branch in GitHub.
     - Fix the issue where pods deployed by the `pgadmin4` command didn’t have
       a writable home directory (#5800).
 
+### Supported versions
+
+- PostgreSQL 17 (PostgreSQL 17.0 is the default image)
+
 ## Version 1.24.0
 
 **Release date:** Aug 22, 2024
