--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -45,6 +45,10 @@ on the release branch in GitHub.
     - Fix the issue where pods deployed by the `pgadmin4` command didn’t have
       a writable home directory (#5800).
 
+### Supported versions
+
+- PostgreSQL 17 (PostgreSQL 17.0 is the default image)
+
 ## Version 1.23.4
 
 **Release date:** Aug 22, 2024
