chore: fix spellcheck, add missing fix in 1.23
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/docs/src/release_notes/v1.23.md
+++ b/docs/src/release_notes/v1.23.md
@@ -31,6 +31,9 @@ on the release branch in GitHub.
 
 ### Fixes:
 
+- Resolve an issue with concurrent status updates when demoting a primary to a
+  designated primary, ensuring smoother transitions during cluster role changes
+  (#5755).
 - Ensure that replica PodDisruptionBudgets (PDB) are removed when scaling down
   to two instances, enabling easier maintenance on the node hosting the replica
   (#5487).
